<resources>
    <string name="app_name">NanoHealthTest</string>
    <string name="log_in">Log In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="continue_button">Continue</string>
    <string name="help_link">Need help?</string>
    <string name="products">Products</string>
    <string name="details">Details</string>
    <string name="order_button">Order Now</string>
    <string name="all_products_header">All Products</string>
    <string name="price_in_aed">%1$.2f AED</string>
    <string name="reviews_number">Reviews (%1$d)</string>

    // Content Descriptions
    <string name="share_button">Share button</string>
    <string name="back_button">Back button</string>
    <string name="more_button">More button</string>
    <string name="product_image">Product image</string>
</resources>