<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_image"
        android:background="@drawable/login_background"
        android:layout_width="0dp"
        android:layout_height="380dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:text="@string/log_in"
        android:textAppearance="?attr/textAppearanceHeadline1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@id/login_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/email_text"
        android:text="@string/email"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email_input"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/login_successful_icon"
        android:src="@drawable/baseline_check_circle_outline_24"
        android:visibility="visible"
        app:tint="?attr/colorPrimary"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/email_input"
        app:layout_constraintTop_toTopOf="@id/email_input"
        app:layout_constraintEnd_toEndOf="@id/email_input"/>

    <ImageView
        android:id="@+id/login_failed_icon"
        android:src="@drawable/baseline_remove_circle_outline_24"
        android:visibility="invisible"
        app:tint="?attr/colorError"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/email_input"
        app:layout_constraintTop_toTopOf="@id/email_input"
        app:layout_constraintEnd_toEndOf="@id/email_input"/>

    <TextView
        android:id="@+id/password_text"
        android:text="@string/password"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/password_show_icon"
        android:src="@drawable/baseline_remove_red_eye_24"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/password_input"
        app:layout_constraintTop_toTopOf="@id/password_input"
        app:layout_constraintEnd_toEndOf="@id/password_input"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:text="@string/continue_button"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.NanoHealthTest.Button.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/help_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_link"
        android:text="@string/help_link"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>